# primekg-similar-names

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
dagster_assets/: __init__.py  download_data.py  primekg_similar_names.py
tests/dagster_assets/: test_disease_assets.py  test_download_data.py
