[project]
name = "primekg-similar-names"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.1",
    "dagster-webserver>=1.12.1",
    "plotly>=6.4.0",
    "polars>=1.35.1",
    "python-levenshtein>=0.27.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
